Model size reduction

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,99 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compressing model with onnx "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 52). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./saved_model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./saved_model\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model successfully converted to SavedModel format at ./saved_model\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Load the .h5 model\n",
+    "model = tf.keras.models.load_model('./face_eye_liveness_model_lccfasd.h5')\n",
+    "\n",
+    "# Save the model in SavedModel format\n",
+    "saved_model_path = './saved_model'\n",
+    "model.save(saved_model_path, save_format='tf')\n",
+    "\n",
+    "print(f\"Model successfully converted to SavedModel format at {saved_model_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%python -m tf2onnx.convert --saved-model ./saved_model --output model.onnx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ONNX model is valid!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import onnx\n",
+    "\n",
+    "# Load the ONNX model\n",
+    "model_path = \"model.onnx\"\n",
+    "try:\n",
+    "    onnx_model = onnx.load(model_path)\n",
+    "\n",
+    "    # Check if the model is well-formed\n",
+    "    onnx.checker.check_model(onnx_model)\n",
+    "    print(\"The ONNX model is valid!\")\n",
+    "except onnx.checker.ValidationError as e:\n",
+    "    print(f\"ONNX model validation failed: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
